paraview: fix version number
ParaView uses different variable name conventions than VTK and the
copy-paste was from VTK.

Reported-by: @aurelieladier

--- a/CMake/paraview-config.cmake.in
+++ b/CMake/paraview-config.cmake.in
@@ -23,7 +23,7 @@ set(CMAKE_MODULE_PATH_save "${CMAKE_MODULE_PATH}")
 list(APPEND CMAKE_MODULE_PATH
   "${CMAKE_CURRENT_LIST_DIR}")
 
-set("${CMAKE_FIND_PACKAGE_NAME}_VERSION" "@PARAVIEW_MAJOR_VERSION@.@PARAVIEW_MINOR_VERSION@.@PARAVIEW_BUILD_VERSION@")
+set("${CMAKE_FIND_PACKAGE_NAME}_VERSION" "@PARAVIEW_VERSION_FULL@")
 
 unset("${CMAKE_FIND_PACKAGE_NAME}_FOUND")
 
