--- a/Plugins/NonOrthogonalSource/Testing/CMakeLists.txt
+++ b/Plugins/NonOrthogonalSource/Testing/CMakeLists.txt
@@ -1,25 +1,27 @@
-set (xmls
-  NonOrthogonalSliceView.xml
-  NonOrthographicOrthographicView.xml
-)
+if (PARAVIEW_BUILD_QT_GUI AND BUILD_SHARED_LIBS)
+  set (xmls
+    NonOrthogonalSliceView.xml
+    NonOrthographicOrthographicView.xml
+  )
 
-set (NonOrthogonalSliceView_FORCE_SERIAL TRUE)
+  set (NonOrthogonalSliceView_FORCE_SERIAL TRUE)
 
-paraview_add_client_tests(
-  LOAD_PLUGIN "NonOrthogonalSource"
-  BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
-  TEST_DATA_TARGET ParaViewData
-  TEST_SCRIPTS ${xmls}
-)
-paraview_add_client_server_tests(
-  LOAD_PLUGIN "NonOrthogonalSource"
-  BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
-  TEST_DATA_TARGET ParaViewData
-  TEST_SCRIPTS ${xmls}
-)
-paraview_add_client_server_render_tests(
-  LOAD_PLUGIN "NonOrthogonalSource"
-  BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
-  TEST_DATA_TARGET ParaViewData
-  TEST_SCRIPTS ${xmls}
-)
+  paraview_add_client_tests(
+    LOAD_PLUGIN "NonOrthogonalSource"
+    BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
+    TEST_DATA_TARGET ParaViewData
+    TEST_SCRIPTS ${xmls}
+  )
+  paraview_add_client_server_tests(
+    LOAD_PLUGIN "NonOrthogonalSource"
+    BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
+    TEST_DATA_TARGET ParaViewData
+    TEST_SCRIPTS ${xmls}
+  )
+  paraview_add_client_server_render_tests(
+    LOAD_PLUGIN "NonOrthogonalSource"
+    BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
+    TEST_DATA_TARGET ParaViewData
+    TEST_SCRIPTS ${xmls}
+  )
+endif ()
