--- a/CMake/paraview-config.cmake.in
+++ b/CMake/paraview-config.cmake.in
@@ -19,7 +19,7 @@ The following variables are provided by this module:
     linked to using `target_link_libraries`.
 #]==]
 
-set(CMAKE_MODULE_PATH_save "${CMAKE_MODULE_PATH}")
+set(${CMAKE_FIND_PACKAGE_NAME}_CMAKE_MODULE_PATH_save "${CMAKE_MODULE_PATH}")
 list(APPEND CMAKE_MODULE_PATH
   "${CMAKE_CURRENT_LIST_DIR}")
 
@@ -162,5 +162,5 @@ if (NOT DEFINED "${CMAKE_FIND_PACKAGE_NAME}_FOUND")
   unset(_paraview_component)
 endif ()
 
-set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH_save}")
-unset(CMAKE_MODULE_PATH_save)
+set(CMAKE_MODULE_PATH "${${CMAKE_FIND_PACKAGE_NAME}_CMAKE_MODULE_PATH_save}")
+unset(${CMAKE_FIND_PACKAGE_NAME}_CMAKE_MODULE_PATH_save)
