testing: fix missing --test-directory flag for Python test

--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -1663,6 +1663,7 @@ if (PARAVIEW_ENABLE_PYTHON)
       -DPARAVIEW_EXECUTABLE:FILEPATH=$<TARGET_FILE:ParaView::paraview>
       -DPVPYTHON_EXECUTABLE:FILEPATH=$<TARGET_FILE:ParaView::pvpython>
       -DPARAVIEW_TEST_OUTPUT_DIR:PATH=${paraview_test_data_directory_output}
+      -DPARAVIEW_TEST_DIR:PATH=${PARAVIEW_TEST_DIR}
       -DTEST_NAME:STRING=${test_name}
       -DTEST_SCRIPT:FILEPATH=${CMAKE_CURRENT_SOURCE_DIR}/${test_name}.xml
       -DTEST_DRIVER:FILEPATH=${CMAKE_CURRENT_SOURCE_DIR}/${test_name}Verify.py
