--- a/Plugins/GmshReader/Testing/CMakeLists.txt
+++ b/Plugins/GmshReader/Testing/CMakeLists.txt
@@ -1,5 +1,5 @@
 if (PARAVIEW_BUILD_QT_GUI AND BUILD_SHARED_LIBS)
-  set(_paraview_add_tests_default_test_data_target GmshReaderData)
+  set(_paraview_add_tests_default_test_data_target ParaViewData)
   ExternalData_Expand_Arguments(ParaViewData _
     "DATA{${CMAKE_CURRENT_SOURCE_DIR}/Data/Gmsh/,REGEX:viz_*}"
     "DATA{${CMAKE_CURRENT_SOURCE_DIR}/Data/Gmsh/naca0012/,REGEX:.*}")
