testing: use correct spelling of OpenTurns flag

--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -509,7 +509,7 @@ if(PARAVIEW_USE_OSPRAY)
     OSPRay.xml)
 endif()
 
-if(PARAVIEW_USE_OPENTURNS)
+if(PARAVIEW_ENABLE_OPENTURNS)
   list(APPEND TESTS_WITH_BASELINES
     HistogramKernelSmoothing.xml)
   list(APPEND TESTS_WITH_BASELINES
