EyeDomeLighting: fix test by using the new name for the plugin.

--- a/Plugins/EyeDomeLighting/Testing/CMakeLists.txt
+++ b/Plugins/EyeDomeLighting/Testing/CMakeLists.txt
@@ -4,7 +4,7 @@ set(EYE_DOME_LIGHTING_TESTS
 
 if (PARAVIEW_BUILD_QT_GUI AND BUILD_SHARED_LIBS)
   paraview_add_client_tests(
-    LOAD_PLUGIN "EyeDomeLightingView"
+    LOAD_PLUGIN "EyeDomeLighting"
     BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
     TEST_DATA_TARGET ParaViewData
     TEST_SCRIPTS ${EYE_DOME_LIGHTING_TESTS}
@@ -13,7 +13,7 @@ endif ()
 
 
 if (TARGET ParaView::pvpython)
-  # this test is not specific to the EyeDomeLightingView plugin, it is meant
+  # this test is not specific to the EyeDomeLighting plugin, it is meant
   # to test that we can reload a plugin multiple times without a crash.
   # for complex Python scripts we may not know that a plugin has already
   # been loaded.
