enable CGNS module.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -475,12 +475,14 @@ endif ()
 
 list(APPEND paraview_requested_modules
   ParaView::ProcessXML
+  ParaView::VTKExtensionsCGNSReader
   ParaView::WrapClientServer
   VTK::FiltersFlowPaths
   VTK::FiltersVerdict
-  VTK::IOTRUCHAS
   VTK::IOTecplotTable
-  VTK::IOVeraOut)
+  VTK::IOTRUCHAS
+  VTK::IOVeraOut
+  )
 
 if (paraview_requested_modules)
   list(REMOVE_DUPLICATES paraview_requested_modules)
