enable `ParaView::VTKExtensionsPoints` module.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -477,6 +477,7 @@ list(APPEND paraview_requested_modules
   ParaView::ProcessXML
   ParaView::VTKExtensionsCGNSReader
   ParaView::VTKExtensionsH5PartReader
+  ParaView::VTKExtensionsPoints
   ParaView::WrapClientServer
   VTK::FiltersFlowPaths
   VTK::FiltersVerdict
