--- a/ParaViewCore/VTKExtensions/CosmoTools/Testing/Cxx/CMakeLists.txt
+++ b/ParaViewCore/VTKExtensions/CosmoTools/Testing/Cxx/CMakeLists.txt
@@ -1,4 +1,5 @@
 vtk_add_test_mpi(vtkPVVTKExtensionsCosmoToolsCxxTests tests
+  TESTING_DATA
   TestHaloFinder.cxx # test of particles output
   TestHaloFinderSummaryInfo.cxx # test of summary information output
   TestHaloFinderSubhaloFinding.cxx # test of subhalo finding option
