move IndeX tests to the plugin subdir.
add a small delay in the test to hopefully address Windows playback
issues.

--- a/Plugins/pvNVIDIAIndeX/CMakeLists.txt
+++ b/Plugins/pvNVIDIAIndeX/CMakeLists.txt
@@ -42,3 +42,7 @@ if (NVINDEX_SKIP_BUILD_RPATH)
       SKIP_BUILD_RPATH TRUE
       INSTALL_RPATH_USE_LINK_PATH FALSE)
 endif ()
+
+if (BUILD_TESTING)
+  add_subdirectory(Testing)
+endif ()
