--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -1639,18 +1639,18 @@ set(paraview_python_verify_tests
 
 if (PARAVIEW_ENABLE_PYTHON)
   foreach(test_name ${paraview_python_verify_tests})
-    add_test(NAME ${test_name}
+    set(tname "ParaView::Applications::${test_name}")
+    add_test(NAME ${tname}
       COMMAND ${CMAKE_COMMAND}
       -DPARAVIEW_EXECUTABLE:FILEPATH=$<TARGET_FILE:ParaView::paraview>
       -DPVPYTHON_EXECUTABLE:FILEPATH=$<TARGET_FILE:ParaView::pvpython>
-      -DPARAVIEW_TEST_OUTPUT_DIR:PATH=${paraview_test_data_directory_output}
-      -DPARAVIEW_TEST_DIR:PATH=${PARAVIEW_TEST_DIR}
+      -DDATA_DIR:PATH=${paraview_test_data_directory_output}
       -DTEST_NAME:STRING=${test_name}
       -DTEST_SCRIPT:FILEPATH=${CMAKE_CURRENT_SOURCE_DIR}/${test_name}.xml
-      -DTEST_DRIVER:FILEPATH=${CMAKE_CURRENT_SOURCE_DIR}/${test_name}Verify.py
+      -DTEST_VERIFIER:FILEPATH=${CMAKE_CURRENT_SOURCE_DIR}/${test_name}Verify.py
       -DTEMPORARY_DIR:PATH=${CMAKE_BINARY_DIR}/Testing/Temporary
       -P ${CMAKE_CURRENT_SOURCE_DIR}/PythonScriptTestDriver.cmake
     )
-    set_tests_properties(${python_state_test} PROPERTIES LABELS "paraview")
+    set_tests_properties(${tname} PROPERTIES LABELS "paraview")
   endforeach()
 endif()
