--- a/Documentation/CMakeLists.txt
+++ b/Documentation/CMakeLists.txt
@@ -18,4 +18,8 @@ add_custom_target(ParaViewDoc-TGZ
     ${PARAVIEW_GENERATED_DOCUMENTATION_OUTPUT_DIRECTORY}
   WORKING_DIRECTORY ${PARAVIEW_GENERATED_DOCUMENTATION_OUTPUT_DIRECTORY}/..
   COMMENT "Generate ParaViewGeneratedDocs.tar.gz")
-add_dependencies(ParaViewDoc-TGZ paraview_doc)
+
+add_dependencies(ParaViewDoc-TGZ ParaViewDoxygenDoc)
+if (PARAVIEW_ENABLE_PYTHON)
+  add_dependencies(ParaViewDoc-TGZ ParaViewPythonDoc)
+endif ()
