fix #17616: cleanup lut related APIs in `simple`
Updating lut APIS in simple to use the newer mechanisms and thus fixing
issue #17616.

--- a/ParaViewCore/ServerManager/Default/Testing/Python/CMakeLists.txt
+++ b/ParaViewCore/ServerManager/Default/Testing/Python/CMakeLists.txt
@@ -12,6 +12,7 @@ set(PY_TESTS
   CSVWriterReader.py,NO_VALID
   GhostCellsInMergeBlocks.py
   IntegrateAttributes.py,NO_VALID
+  LookupTable.py,NO_VALID
   MultiServer.py,NO_VALID
   PointGaussianProperties.py
   CompositeDataFieldArraysInformation.py,NO_VALID
