cmake: remove unnecessary flag `PARAVIEW_ENABLE_MATPLOTLIB`.
Missing matplotlib shouldn't cause errors at runtime unless matplotlib
based features are used. And uses should able to fix them by simply
installing matplotlib without having to rebuild ParaView.

--- a/Applications/ParaView/Testing/Python/CMakeLists.txt
+++ b/Applications/ParaView/Testing/Python/CMakeLists.txt
@@ -34,7 +34,7 @@ if (numpy_found)
     )
   unset(paraview_python_args)
 
-  if (PARAVIEW_ENABLE_MATPLOTLIB AND matplotlib_found)
+  if (matplotlib_found)
     # add Matplotlib tests only if matplotlib was found at configure time.
     paraview_add_test_python(
       NO_DATA NO_RT
